fixed uav assignment prompt cutting off issue

--- a/NEST-App/Content/Map/GOOG/MapGOOG.css
+++ b/NEST-App/Content/Map/GOOG/MapGOOG.css
@@ -271,10 +271,10 @@ html, body, #map-canvas {
     border: none;
     position: fixed;
     margin: auto;
-    width: 15%;
+    width: 200px;
     height: 150px;
-    right: 0%;
-    bottom: 0%;
+    right: 5px;
+    bottom: 5px;
     overflow: auto;
     padding: 0px;
     float: right;
@@ -282,9 +282,9 @@ html, body, #map-canvas {
 
 #RoundRobin_popup {
     position: fixed;
-    width: 15%;
+    width: 200px;
     padding: 10px;
-    border: 2px solid gray;
+    border: 2px solid red;
     border-radius: 10px;
     background-color: white;
     overflow: hidden;
@@ -342,8 +342,9 @@ html, body, #map-canvas {
     border: none;
     width: 48%;
     float: right;
-    margin-left: 1%;
-    margin-right: 0;
+    border-top:2px solid transparent;
+    margin-left: 0;
+    margin-right: 1%;
 }
 
 #RR_button_accept:hover {
